<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="777dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="Hello                    "
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/lepesszamlalogomb"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="241dp"
        android:layout_marginBottom="51dp"
        android:text="@string/LepesSzamlaloGomb" />

    <Button
        android:id="@+id/fenymerogomb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="119dp"
        android:onClick="Fenymerore"
        android:text="@string/FenymeroGomb" />

    <Button
        android:id="@+id/hozzaadasgomb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="314dp"
        android:layout_marginBottom="207dp"
        android:onClick="hozzaadas"
        android:text="@string/HozzaadasGombListahoz" />

    <Button
        android:id="@+id/utolsoeltavoltasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="206dp"
        android:onClick="utolsotorles"
        android:text="@string/Utolsoeltavolitasa" />

    <Button
        android:id="@+id/simaeltavolitas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="207dp"
        android:onClick="torles"
        android:text="@string/Eltavolitas" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="308dp" />

    <EditText
        android:id="@+id/ListaEditTextje"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="280dp"
        android:ems="10"
        android:hint="xxx km"
        android:inputType="text" />

    <TextView
        android:id="@+id/ValtoztatandoNevId"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="776dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="Anonymous"
        android:textColor="@color/yellow"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="711dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/Mennyitfucc"
        android:textColor="@color/yellow"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="47dp"
        android:onClick="hozzaadasra"
        android:text="@string/ADatokMegadasa" />

</RelativeLayout>